# fixed-point-math

./: .gitignore  CMakeLists.txt  Changelog.md  FixedPointMath.code-workspace  License  README.md  mkdocs.yml
doc/: DocReference.md  Documentation.md
doc/examples/: MyRange.hpp
doc/scripts/: qtypes.py  sqtypes.py
docs/: Specs.md  arithmetics.md  getting_started.md  index.md  q.md  sq.md  utilities.md
docs/arithmetics/: binary.md  clamp.md  comparison.md  math.md  overview.md  practical.md  shift.md  unary.md
docs/qtype/: cast.md  construction.md  overflow.md  q.md  rescale.md  value.md
docs/sqtype/: construction.md  rescale_cast.md  sq.md  value.md
docs/utilities/: assertion.md  helpers.md  scaling.md
inc/: fpm.hpp
inc/fpm/: fpm.hpp  q.hpp  q_types.hpp  sq.hpp  sq_types.hpp
rc/scripts/: qtypes.py
src/: fpm.cpp  fpm.hpp  main.cpp
src/fpm/: fpm.cpp  fpm.hpp  q.hpp  q_types.hpp  sq.hpp  sq_types.hpp
src/fpm/_/: fpm.hpp  q.hpp  sq.hpp
test/: CMakeLists.txt  Fpm.test.cpp  Q.test.cpp  Sq.test.cpp  fpm.test.cpp  playground.cpp  q.test.cpp  sq.test.cpp
tests/: Rescale_Error.c++
